--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -6,7 +6,9 @@
   <%= f.label :artist_name %>
   <%= f.text_field :artist_name %>
   <%= f.collection_select :genre_id, Genre.all, :id, :name %>
-  <br />
+  <input name='category[note_contents][]' id='song_notes_1'>
+  <input name='category[note_contents][]' id='song_notes_1'>
+  <input name='category[note_contents][]' id='song_notes_1'>
 
   <%= f.submit %>
 <% end %>
